[dyad] Regenerating locale files with corrected texts and JSON structure - wrote 3 file(s)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -913,10 +913,10 @@
         "olive_oil": "Aceite de oliva"
       },
       "instructions": [
-        "Beat the eggs.",
-        "Heat oil in a pan.",
-        "Sauté tomato and spinach for a few minutes.",
-        "Add eggs and cook, stirring until done."
+        "Batir los huevos.",
+        "Calentar el aceite en una sartén.",
+        "Saltear el tomate y la espinaca por unos minutos.",
+        "Agregar los huevos y cocinar revolviendo hasta que estén listos."
       ]
     },
     "diet_plans": {
