--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -14,7 +14,8 @@
     "ai_limit_daily_desc": "You have reached the daily limit of {{limit}} uses for this feature. Please come back tomorrow to continue.",
     "ai_limit_weekly_desc": "You have reached the weekly limit of {{limit}} uses for this feature. Please come back next week to continue.",
     "add": "Add",
-    "deleted_success": "Deleted successfully"
+    "deleted_success": "Deleted successfully",
+    "view_diet": "View Diet"
   },
   "water": {
     "remaining": "Remaining",
@@ -268,7 +269,7 @@
       "title": "Select Plan",
       "annual": "Annual",
       "monthly": "Monthly",
-      "price_suffix": "/month",
+      "price_suffix": "/mes",
       "trial_note": "Free for 3 days."
     },
     "buttons": {
@@ -841,7 +842,7 @@
         "lean_beef": "Lean beef",
         "lettuce": "Lettuce",
         "tomato": "Tomato",
-        "olive_oil": "Olive oil"
+        "olive_oil": "Aceite de oliva"
       },
       "instructions": [
         "Grill the beef.",
