--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -14,7 +14,8 @@
     "ai_limit_daily_desc": "Has alcanzado el límite de {{limit}} usos diarios para esta función. Vuelve mañana para continuar.",
     "ai_limit_weekly_desc": "Has alcanzado el límite de {{limit}} usos semanales para esta función. Vuelve la próxima semana para continuar.",
     "add": "Añadir",
-    "deleted_success": "Eliminado correctamente"
+    "deleted_success": "Eliminado correctamente",
+    "view_diet": "Ver Dieta"
   },
   "water": {
     "remaining": "Restante",
