[dyad] Added High Protein diet and updated UI - wrote 6 file(s)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -334,8 +334,30 @@
     "log_weight": "Log Weight",
     "log_water": "Log Water",
     "recipes": "Recipes",
-    "diets_label": "Diets",
+    "diets_label": "Weekly Plan",
     "diet_types": "Diet Types"
+  },
+  "diet_list": {
+    "title": "Premium Diets",
+    "subtitle": "Find the perfect eating style for your goals.",
+    "view_diet": "View Diet",
+    "objective": "OBJECTIVE",
+    "ideal_for": "IDEAL FOR",
+    "not_recommended_for": "NOT RECOMMENDED FOR",
+    "target_macros": "TARGET MACROS"
+  },
+  "diet_types_data": {
+    "high_protein": {
+      "name": "High Protein",
+      "short_desc": "Boost protein intake to gain muscle and lose fat.",
+      "description": "A nutritional plan focused on increasing the proportion of protein within daily intake to promote muscle mass preservation, improve satiety, and support body fat reduction while maintaining an adequate caloric balance.",
+      "objective": "Prioritize protein consumption within a balanced diet without completely eliminating carbohydrates or fats.",
+      "ideal_for_1": "People looking to lose fat without losing muscle mass.",
+      "ideal_for_2": "Users who perform physical activity or strength training.",
+      "ideal_for_3": "People who want better appetite control.",
+      "not_recommended_for_1": "People with medical restrictions related to high protein diets.",
+      "not_recommended_for_2": "People following a strictly vegan diet."
+    }
   },
   "recipes": {
     "title": "Recipes",
@@ -1325,106 +1347,106 @@
   },
   "tutorial": {
     "welcome_title": "Welcome to Calorel!",
-    "welcome_content": "Hagamos un recorrido rápido por las funciones principales para comenzar tu viaje de salud.",
-    "carousel_title": "Tu Resumen Diario",
-    "carousel_content": "Aquí encontrarás tu progreso diario de calorías, macros y otras métricas clave. ¡Desliza para ver más detalles!",
-    "scanner_title": "Registra Todo Fácilmente",
-    "scanner_content": "Toca el botón central para abrir el menú. Puedes escanear tu comida con IA, registrar ejercicio o añadir entradas manualmente.",
-    "progress_title": "Sigue tu Progreso",
-    "progress_content": "Visita la pestaña Progreso para ver la evolución de tu peso, IMC y seguir tus rachas diarias.",
-    "profile_title": "Tu Perfil",
-    "profile_content": "La pestaña Perfil es tu espacio personal. Aquí puedes editar tus datos, gestionar objetivos y configurar la app.",
+    "welcome_content": "Let's take a quick tour of the main features to start your health journey.",
+    "carousel_title": "Your Daily Summary",
+    "carousel_content": "Here you will find your daily progress for calories, macros, and other key metrics. Swipe to see more details!",
+    "scanner_title": "Log Everything Easily",
+    "scanner_content": "Tap the center button to open the menu. You can scan your food with AI, log an exercise, or add entries manually.",
+    "progress_title": "Track Your Progress",
+    "progress_content": "Visit the Progress tab to see your weight evolution, BMI, and track your daily streaks.",
+    "profile_title": "Your Profile",
+    "profile_content": "The Profile tab is your personal space. Here you can edit your details, manage goals, and configure app settings.",
     "finish": "Finish",
     "next": "Siguiente"
   },
   "notifications": {
-    "title": "Mantén la Constancia",
-    "description": "Activa las notificaciones para recibir recordatorios de comidas, hidratación y control de peso. ¡Te ayudará a no perder el ritmo!",
-    "enable_button": "Activar Notificaciones",
-    "skip_button": "Quizás más tarde",
-    "breakfast_title": "Buenos Días",
-    "breakfast_body": "Empieza el día registrando tu desayuno.",
-    "food_title": "Hora del Almuerzo",
-    "food_body_1": "¿Qué hay de almuerzo? Regístralo ahora.",
-    "dinner_title_1": "Hora de la Cena",
-    "dinner_body_1": "No olvides registrar tu última comida.",
-    "snack_title": "Hora del Snack",
-    "snack_body": "Pausa rápida, registra tu snack.",
-    "water_title_1": "Hidratación",
-    "water_body_1": "Tu cuerpo necesita agua. ¡Bebe un vaso!",
-    "water_title_2": "Hábito Saludable",
-    "water_body_2": "Mantente hidratado para mejores resultados.",
-    "weight_title_1": "Control de Peso",
-    "weight_body_1": "Actualiza tu peso hoy para ver tu progreso."
+    "title": "Stay Consistent",
+    "description": "Turn on notifications to get reminders for meals, hydration, and weight checks. It helps you stay on track!",
+    "enable_button": "Enable Notifications",
+    "skip_button": "Maybe Later",
+    "breakfast_title": "Good Morning",
+    "breakfast_body": "Start your day by logging your breakfast.",
+    "food_title": "Lunch Time",
+    "food_body_1": "What's for lunch? Log it now.",
+    "dinner_title_1": "Dinner Time",
+    "dinner_body_1": "Don't forget to log your last meal.",
+    "snack_title": "Snack Time",
+    "snack_body": "Quick break, log your snack.",
+    "water_title_1": "Hydration",
+    "water_body_1": "Your body needs water. Drink a glass!",
+    "water_title_2": "Healthy Habit",
+    "water_body_2": "Stay hydrated for better results.",
+    "weight_title_1": "Weight Control",
+    "weight_body_1": "Update your weight today to see your progress."
   },
   "subscribe": {
-    "title": "Desbloquea Tu Potencial",
-    "subtitle": "Accede a todas las funciones premium para alcanzar tus objetivos más rápido.",
-    "best_value": "Mejor Valor - Ahorra 67%",
-    "month_short": "mes",
-    "billed_yearly": "{{price}} facturado anualmente",
-    "billed_yearly_simple": "facturado hoy",
-    "no_charge_text": "Sin cargo por 3 días. Cancela cuando quieras.",
-    "immediate_charge_text": "El cargo se realizará inmediatamente.",
-    "continue_limited": "Continuar con versión limitada",
-    "success_toast": "¡Plan Premium activado!",
-    "trial_started": "¡Prueba de 3 días iniciada!",
-    "enable_trial": "Habilitar prueba de 3 días",
-    "enable_trial_desc": "Pruébalo gratis antes de pagar",
-    "plan_free": "Gratis",
+    "title": "Unlock Your Full Potential",
+    "subtitle": "Get all premium features to reach your goals faster.",
+    "best_value": "Best Value - Save 67%",
+    "month_short": "mo",
+    "billed_yearly": "{{price}} billed yearly",
+    "billed_yearly_simple": "billed today",
+    "no_charge_text": "No charge for 3 days. Cancel anytime.",
+    "immediate_charge_text": "You will be charged immediately.",
+    "continue_limited": "Continue with limited version",
+    "success_toast": "Premium plan activated!",
+    "trial_started": "3-Day Trial Started!",
+    "enable_trial": "Enable 3-Day Free Trial",
+    "enable_trial_desc": "Try it free before you pay",
+    "plan_free": "Free",
     "plan_premium": "Premium",
     "timeline": {
-      "today_title": "Hoy: Inicia Prueba Gratuita",
-      "today_desc": "Accede a todas las funciones premium de inmediato.",
-      "reminder_title": "Día 2: Recordatorio",
-      "reminder_desc": "Te enviaremos un recordatorio antes de que finalice la prueba.",
-      "billing_title": "Día 3: Comienza la Facturación",
-      "billing_desc": "Si no cancelas, la suscripción comenzará."
+      "today_title": "Today: Start Free Trial",
+      "today_desc": "Access all premium features immediately.",
+      "reminder_title": "Day 2: Reminder",
+      "reminder_desc": "We will send you a reminder before the trial ends.",
+      "billing_title": "Day 3: Billing Starts",
+      "billing_desc": "If you don't cancel, the subscription will begin."
     },
-    "features_title": "Funciones Premium Incluidas:",
+    "features_title": "Premium Features Included:",
     "features": {
-      "scanner": "Escáner de Comida con IA (Ilimitado)",
-      "exercise": "Análisis de Ejercicio con IA (Ilimitado)",
-      "diet_plans": "Planes de Dieta Semanales Personalizados",
-      "goals": "Seguimiento Avanzado de Metas y Sugerencias",
-      "menu_analysis": "Análisis de Menús de Restaurante",
-      "tracking": "Registro de Peso y Agua"
+      "scanner": "AI Food Scanner (Unlimited)",
+      "exercise": "AI Exercise Analysis (Unlimited)",
+      "diet_plans": "Personalized Weekly Diet Plans",
+      "goals": "Advanced Goal Tracking & Suggestions",
+      "menu_analysis": "Restaurant Menu Analysis",
+      "tracking": "Weight & Water Tracking"
     },
     "plan": {
-      "title": "Selecciona tu Plan",
-      "annual": "Anual",
-      "monthly": "Mensual",
-      "price_suffix": "/mes",
-      "trial_note": "Gratis por 3 días."
+      "title": "Select Plan",
+      "annual": "Annual",
+      "monthly": "Monthly",
+      "price_suffix": "/month",
+      "trial_note": "Free for 3 days."
     },
     "buttons": {
-      "start_trial": "Iniciar Prueba Gratuita de 3 Días",
-      "unlock_now": "Desbloquear Ahora",
-      "pay_now": "Pagar {{price}} Ahora",
-      "no_payment_note": "Sin cargo durante los primeros 3 días."
+      "start_trial": "Start 3-Day Free Trial",
+      "unlock_now": "Unlock Now",
+      "pay_now": "Pay {{price}} Now",
+      "no_payment_note": "No charge for the first 3 days."
     }
   },
   "subscription_success": {
-    "title_trial": "¡Felicidades!",
-    "subtitle_trial": "Tu prueba gratuita de 3 días ha comenzado.",
-    "desc_trial": "Tienes acceso ilimitado a todas las funciones Premium. ¡Aprovéchalas al máximo!",
-    "title_annual": "¡Excelente Elección!",
-    "subtitle_annual": "Has activado el Plan Anual.",
-    "desc_annual": "Gracias por comprometerte con tu salud a largo plazo. Estamos aquí para apoyarte.",
-    "title_monthly": "¡Todo Listo!",
-    "subtitle_monthly": "Has activado el Plan Mensual.",
-    "desc_monthly": "Gracias por confiar en Calorel. ¡Vamos a lograr esas metas juntos!",
-    "button": "Comenzar Ahora"
+    "title_trial": "Congratulations!",
+    "subtitle_trial": "Your 3-Day Free Trial has started.",
+    "desc_trial": "You have unlimited access to all Premium features. Make the most of it!",
+    "title_annual": "Great Choice!",
+    "subtitle_annual": "You have activated the Annual Plan.",
+    "desc_annual": "Thank you for committing to your long-term health. We are here to support you.",
+    "title_monthly": "You're All Set!",
+    "subtitle_monthly": "You have activated the Monthly Plan.",
+    "desc_monthly": "Thank you for trusting Calorel. Let's reach those goals together!",
+    "button": "Start Now"
   },
   "widgets": {
     "title": "Widgets",
-    "preview_title": "Tu progreso en inicio",
-    "how_to_add": "¿Cómo agregar?",
-    "instructions_title": "Agregar Widget a Inicio",
-    "step_1": "Ve a la pantalla de inicio de tu teléfono.",
-    "step_2": "Mantén presionado en un espacio vacío.",
-    "step_3": "Selecciona 'Widgets'.",
-    "step_4": "Busca 'Calorel' y arrastra el widget."
+    "preview_title": "Your progress at home",
+    "how_to_add": "How to add?",
+    "instructions_title": "Add Widget to Home",
+    "step_1": "Go to your phone's home screen.",
+    "step_2": "Long press on an empty space.",
+    "step_3": "Select 'Widgets'.",
+    "step_4": "Search for 'Calorel' and drag the widget."
   },
   "bottom_nav": {
     "home": "Home",
@@ -1440,11 +1462,28 @@
     "log_weight": "Log Weight",
     "log_water": "Log Water",
     "recipes": "Recipes",
-    "diets_label": "Weekly Plan",
-    "diet_types": "Diet Types"
+    "diets_label": "Diets"
   },
   "diet_list": {
-    "title": "Diet Types",
-    "subtitle": "Explore different eating styles to find the best one for you."
+    "title": "Premium Diets",
+    "subtitle": "Find the perfect eating style for your goals.",
+    "view_diet": "View Diet",
+    "objective": "OBJECTIVE",
+    "ideal_for": "IDEAL FOR",
+    "not_recommended_for": "NOT RECOMMENDED FOR",
+    "target_macros": "TARGET MACROS"
+  },
+  "diet_types_data": {
+    "high_protein": {
+      "name": "High Protein",
+      "short_desc": "Boost protein intake to gain muscle and lose fat.",
+      "description": "A nutritional plan focused on increasing the proportion of protein within daily intake to promote muscle mass preservation, improve satiety, and support body fat reduction while maintaining an adequate caloric balance.",
+      "objective": "Prioritize protein consumption within a balanced diet without completely eliminating carbohydrates or fats.",
+      "ideal_for_1": "People looking to lose fat without losing muscle mass.",
+      "ideal_for_2": "Users who perform physical activity or strength training.",
+      "ideal_for_3": "People who want better appetite control.",
+      "not_recommended_for_1": "People with medical restrictions related to high protein diets.",
+      "not_recommended_for_2": "People following a strictly vegan diet."
+    }
   }
 }
