[dyad] I18n Refactor - wrote 3 file(s)

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -14,7 +14,8 @@
     "ai_limit_daily_desc": "Has alcanzado el límite de {{limit}} usos diarios para esta función. Vuelve mañana para continuar.",
     "ai_limit_weekly_desc": "Has alcanzado el límite de {{limit}} usos semanales para esta función. Vuelve la próxima semana para continuar.",
     "add": "Añadir",
-    "deleted_success": "Eliminado correctamente"
+    "deleted_success": "Eliminado correctamente",
+    "saved": "Guardado correctamente"
   },
   "water": {
     "remaining": "Restante",
@@ -324,7 +325,10 @@
     "objective": "OBJETIVO",
     "ideal_for": "IDEAL PARA",
     "not_recommended_for": "NO RECOMENDADA PARA",
-    "target_macros": "MACROS OBJETIVO"
+    "target_macros": "MACROS OBJETIVO",
+    "how_it_works": "CÓMO FUNCIONA",
+    "start_diet": "Empezar Dieta",
+    "diet_label": "DIETA"
   },
   "diet_types_data": {
     "high_protein": {
